<resources>
    <string name="app_name">Task</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="feitas">Feitas</string>
    <string name="pendentes">Pendentes</string>
    <string name="sair">Sair</string>
    <string name="nome">Nome</string>
    <string name="email">Email</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="senha">Senha</string>
    <string name="informe_todos_campos">Informe todos os campos!!</string>
    <string name="erro_inesperado">Algo de errado aconteceu!! Tente Novamente!</string>
    <string name="email_em_uso">Email em uso</string>
    <string name="entrar">Entrar</string>
    <string name="email_senha_incorretos">Email ou senha incorretos!!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="descricao">Descrição</string>
    <string name="adicionar_tarefa">Adicionar Tarefa</string>
    <string name="atualizar_tarefa">Atualizar Tarefa</string>
</resources>
